--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "phaser": "^3.60.0",
     "rxjs": "~7.8.0",
     "sass": "^1.69.4",
+    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
